# RayTracer

./: .gitignore  CMakeLists.txt  Camera.h  Light.h  Object.h  Parser.h  Pigment.h  Plane.h  README.txt  Ray.h  Scene.h  Sphere.h  Util.h  main.cpp  out.ppm  raytrace  run.sh  simple.pov  vec3.h
input/: myTestTexRot.pov  new.pov  new2.pov  new3.pov  new4.pov  new5.pov  new6.pov  new7.pov  new8.pov  p4_r2-1.pov  p4_r2.pov  p4_tm-2.pov  quiz6.pov.txt  texturemap.pov  trans0.pov  trans2.pov
output/: out.ppm
scr/: Hit.h  Light.h  Object.h  Parser.h  Plane.h  Ray.h  Scene.h  Shape.h  Sphere.h  Texture.h  Triangle.h  Util.h  main.cpp
